--- a/index.html
+++ b/index.html
@@ -21,9 +21,11 @@
 
 <body>
     <div class="header">
+        <!-- Header -->
         <header>
+            <!-- Navigation Bar -->
             <div class="container">
-                <nav class="navbar navbar-expand-lg navbar-dark bg-transparent">
+                <nav class="navbar navbar-expand-lg navbar-dark bg-info">
                     <div class="container">
                         <a class="navbar-brand" href="javascript:;">Home</a>
                         <button class="navbar-toggler" type="button" data-toggle="collapse"
@@ -77,8 +79,10 @@
             </div>
         </header>
     </div>
+    <!-- Main Body -->
     <div class="mainBody">
         <div class="container-fluid">
+            <!-- Header Breadcrumbs -->
             <div class="header-body">
                 <div class="row align-items-center py-4">
                     <div class="col-lg-6 col-7">
@@ -97,6 +101,7 @@
                     </div>
                 </div>
                 <!-- Card stats -->
+                <!-- First Row -->
                 <div class="row">
                     <div class="col-xl-3 col-md-6">
                         <div class="card card-stats">
@@ -189,7 +194,9 @@
                     </div>
                 </div>
             </div>
+            <!-- Second Row -->
             <div class="row">
+                <!-- Bar Chart -->
                 <div class="col-md-4">
                     <div id="barChartDiv">
                         <div class="card">
@@ -201,6 +208,7 @@
                         </div>
                     </div>
                 </div>
+                <!-- Line Chart -->
                 <div class="col-md-8">
                     <div id="lineChartDiv">
                         <div class="card">
@@ -213,7 +221,9 @@
                     </div>
                 </div>
             </div>
+            <!-- Third Row -->
             <div class="row">
+                <!-- Radar Chart -->
                 <div class="col-md-4">
                     <div id="radarChartDiv">
                         <div class="card">
@@ -225,6 +235,7 @@
                         </div>
                     </div>
                 </div>
+                <!-- Polar Chart -->
                 <div class="col-md-4">
                     <div id="polarChartDiv">
                         <div class="card">
@@ -236,6 +247,7 @@
                         </div>
                     </div>
                 </div>
+                <!-- Pie Chart -->
                 <div class="col-md-4">
                     <div id="pieChartDiv">
                         <div class="card">
@@ -248,7 +260,9 @@
                     </div>
                 </div>
             </div>
+            <!-- Fourth Row -->
             <div class="row">
+                <!-- Bubble Chart -->
                 <div class="col-md-7">
                     <div id="bubbleChartDiv">
                         <div class="card">
@@ -260,6 +274,7 @@
                         </div>
                     </div>
                 </div>
+                <!-- Scatter Chart -->
                 <div class="col-md-5">
                     <div id="scatterChartDiv">
                         <div class="card">
@@ -272,7 +287,9 @@
                     </div>
                 </div>
             </div>
+            <!-- Fifth Row -->
             <div class="row">
+                <!-- Doughnut Chart -->
                 <div class="col-md-4">
                     <div id="doughnutChartDiv">
                         <div class="card">
@@ -284,6 +301,7 @@
                         </div>
                     </div>
                 </div>
+                <!-- Page visits table -->
                 <div class="col-xl-8">
                     <div class="card">
                         <div class="card-header border-0">
@@ -384,9 +402,6 @@
                     </div>
                 </div>
             </div>
-            <div class="row">
-                
-        </div>
     </div>
 
     <!--   Core JS Files   -->
